--- a/views/bookinstance_detail.pug
+++ b/views/bookinstance_detail.pug
@@ -17,3 +17,8 @@ block content
 
   if bookinstance.status!='Available'
     p #[strong Due back:] #{ bookinstance.due_back_formatted }
+
+  p
+    a(href=bookinstance.url + '/delete') delete book instance
+  p
+    a(href=bookinstance.url + '/update') update book instance
