changed the bookinstance/delete title to be the ._id instead of imprint

--- a/views/bookinstance_delete.pug
+++ b/views/bookinstance_delete.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 #{ title }: #{ instance.imprint }
+  h1 #{ title }: #{ instance._id }
 
   p #[strong Title:]
     a(href=instance.book.url) #{ instance.book.title }
