--- a/views/genre_detail.pug
+++ b/views/genre_detail.pug
@@ -14,3 +14,9 @@ block content
 
       else
         p This genre has no books
+
+    hr
+    p
+      a(href=genre._id + '/delete') Delete Genre
+    p
+      a(href=genre._id + '/update') Update Genre
