--- a/views/bookinstance_form.pug
+++ b/views/bookinstance_form.pug
@@ -33,7 +33,7 @@ block content
       input#due_back.form-control(
         type='date',
         name='due_back',
-        value=undefined === bookinstance ? '' : bookinstance.due_back
+        value=undefined === bookinstance ? '' : bookinstance.due_back_yyyy_mm_dd
       )
 
     .form-group
@@ -44,10 +44,22 @@ block content
         name='status',
         required='true'
       )
-        option(value='Maintenance') Maintenance
-        option(value='Available') Available
-        option(value='Loaned') Loaned
-        option(value='Reserved') Reserved
+        option(
+          value='Maintenance',
+          selected=undefined === bookinstance || bookinstance.status != 'Maintenance' ? false : 'selected'
+        ) Maintenance
+        option(
+          value='Available',
+          selected=undefined === bookinstance || bookinstance.status != 'Available' ? false : 'selected'
+        ) Available
+        option(
+          value='Loaned',
+          selected=undefined === bookinstance || bookinstance.status != 'Loaned' ? false : 'selected'
+        ) Loaned
+        option(
+          value='Reserved',
+          selected=undefined === bookinstance || bookinstance.status != 'Reserved' ? false : 'selected'
+        ) Reserved
 
     button.btn.btn-primary(type='submit') Submit
 
