author_update_get works, and author_update_post works.

--- a/views/author_form.pug
+++ b/views/author_form.pug
@@ -26,14 +26,14 @@ block content
       input#date_of_birth.form-control(
         type='date',
         name='date_of_birth',
-        value=undefined === author ? '' : author.date_of_birth
+        value=undefined === author ? '' : author.birth_yyyy_mm_dd
       )
     .form-group
       label(for='date_of_death') Date of death:
       input#date_of_death.form-control(
         type='date',
         name='date_of_death',
-        value=undefined === author ? '' : author.date_of_death
+        value=undefined === author ? '' : author.death_yyyy_mm_dd
       )
     button.btn.btn-primary(type='submit') Submit
   if errors
